--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,3 +35,11 @@
     </div>
   </div>
 </div>
+
+Con muchas opciones
+<div>
+  <navigation-bar
+    [attr.items]="items2"
+  ></navigation-bar>
+
+</div>
